syntax = "proto3";

package api.document;

option go_package = "github.com/rusgainew/tunduck-app-mk/proto-lib/document";

import "common.proto";
import "document.proto";

/**
 * DocumentService provides document management and workflow operations
 * Используется:
 * - document-service: реализует этот сервис
 * - api-gateway: клиент для маршрутизации запросов
 */
service DocumentService {
  /**
   * Get document by ID
   * Request: document_id
   * Response: document with all entries
   */
  rpc GetDocument(GetDocumentRequest) returns (Document);

  /**
   * Create new document
   * Request: organization_id, title, content, created_by
   * Response: document
   * Emits: DocumentCreatedEvent (via RabbitMQ)
   */
  rpc CreateDocument(CreateDocumentRequest) returns (Document);

  /**
   * Update document
   * Request: id, title, content
   * Response: document
   * Emits: DocumentUpdatedEvent (via RabbitMQ)
   */
  rpc UpdateDocument(UpdateDocumentRequest) returns (Document);

  /**
   * Send document for approval
   * Request: document_id, recipient_id, message
   * Response: document
   * Emits: DocumentSentEvent (via RabbitMQ)
   */
  rpc SendDocument(SendDocumentRequest) returns (Document);

  /**
   * Approve document
   * Request: document_id, approved_by, comments
   * Response: document
   * Emits: DocumentApprovedEvent (via RabbitMQ)
   */
  rpc ApproveDocument(ApproveDocumentRequest) returns (Document);

  /**
   * Reject document
   * Request: document_id, rejected_by, reason
   * Response: document
   * Emits: DocumentRejectedEvent (via RabbitMQ)
   */
  rpc RejectDocument(RejectDocumentRequest) returns (Document);

  /**
   * Archive document
   * Request: document_id
   * Response: document
   * Emits: DocumentArchivedEvent (via RabbitMQ)
   */
  rpc ArchiveDocument(ArchiveDocumentRequest) returns (Document);

  /**
   * List documents with pagination and filters
   * Request: organization_id, status, page, per_page
   * Response: documents list with pagination info
   */
  rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse);

  /**
   * Add entry to document
   * Request: document_id, key, value
   * Response: document_entry
   */
  rpc AddDocumentEntry(AddDocumentEntryRequest) returns (DocumentEntry);

  /**
   * Update document entry
   * Request: entry_id, key, value
   * Response: document_entry
   */
  rpc UpdateDocumentEntry(UpdateDocumentEntryRequest) returns (DocumentEntry);

  /**
   * Remove document entry
   * Request: entry_id
   * Response: empty
   */
  rpc RemoveDocumentEntry(RemoveDocumentEntryRequest) returns (api.common.Empty);

  /**
   * Get document history
   * Request: document_id, page, per_page
   * Response: document versions
   */
  rpc GetDocumentHistory(GetDocumentHistoryRequest) returns (DocumentHistoryResponse);
}

// ============================================
// Request/Response Messages
// ============================================

message GetDocumentRequest {
  string document_id = 1;
}

message CreateDocumentRequest {
  string organization_id = 1;
  string title = 2;
  string content = 3;
  string created_by = 4;
}

message UpdateDocumentRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

message SendDocumentRequest {
  string document_id = 1;
  string recipient_id = 2;
  string message = 3;
}

message ApproveDocumentRequest {
  string document_id = 1;
  string approved_by = 2;
  string comments = 3;
}

message RejectDocumentRequest {
  string document_id = 1;
  string rejected_by = 2;
  string reason = 3;
}

message ArchiveDocumentRequest {
  string document_id = 1;
}

message ListDocumentsRequest {
  string organization_id = 1;
  string status = 2; // Filter: "draft", "sent", "approved", "archived"
  string created_by = 3; // Filter by creator (optional)
  int32 page = 4;
  int32 per_page = 5;
}

message ListDocumentsResponse {
  repeated Document documents = 1;
  api.common.PageInfo page_info = 2;
}

message AddDocumentEntryRequest {
  string document_id = 1;
  string key = 2;
  string value = 3;
}

message UpdateDocumentEntryRequest {
  string entry_id = 1;
  string key = 2;
  string value = 3;
}

message RemoveDocumentEntryRequest {
  string entry_id = 1;
}

message GetDocumentHistoryRequest {
  string document_id = 1;
  int32 page = 2;
  int32 per_page = 3;
}

message DocumentHistoryResponse {
  repeated DocumentVersion versions = 1;
  api.common.PageInfo page_info = 2;
}
