syntax = "proto3";

package entities;

option go_package = "github.com/rusgainew/tunduck-app-mk/proto-lib/entities";

// InternationalData содержит данные для международных операций.
// Используется для операций с иностранными партнерами и таможенных процедур.
message InternationalData {
  // IsResident - Флаг резидентства юридического лица (продавца).
  // true: компания является резидентом Кыргызской Республики
  // false: компания является нерезидентом (иностранная компания)
  bool is_resident = 1;

  // ExchangeRate - Курс обмена иностранной валюты к сому.
  // Используется при операциях в иностранной валюте.
  // Пример: 0.0119 (если счет в долларах США)
  double exchange_rate = 2;

  // ForeignName - Наименование иностранной компании/контрагента.
  // Используется, когда контрагент из-за границы.
  string foreign_name = 3;

  // SellerBranchPIN - ИНН филиала/представительства поставщика.
  // Используется, если поставщик осуществляет деятельность через филиалы.
  string seller_branch_pin = 4;
}
